Se creó con Colab

--- a/Parcial1_SyS_2024_2.ipynb
+++ b/Parcial1_SyS_2024_2.ipynb
@@ -308,7 +308,7 @@
       "cell_type": "code",
       "source": [
         "# Definir la señal de entrada x[n]\n",
-        "n = np.arange(len(t))  # Define n as an array of time indices\n",
+        "n = np.arange(len(t))  # Define n como una matriz de indice en el tiempo\n",
         "x_n = np.sin(100 * np.pi * n / fs) + np.sin(600 * np.pi * n / fs)  # La señal x[n] = sin(100πn) + sin(600πn)\n",
         "\n",
         "# Realizar la convolución\n",
