--- a/Parcial1_SyS_2024_2.ipynb
+++ b/Parcial1_SyS_2024_2.ipynb
@@ -307,23 +307,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Definir la señal de entrada x[n]\n",
-        "n = np.arange(len(t))  # Define n como una matriz de indice en el tiempo\n",
-        "x_n = np.sin(100 * np.pi * n / fs) + np.sin(600 * np.pi * n / fs)  # La señal x[n] = sin(100πn) + sin(600πn)\n",
+        "x = np.sin(100 *np.pi *t) + np.sin(6 * t)\n",
+        "#t_n= np.arange(-0.01, 0.049, 1/fs) # This line creates an incorrect time vector\n",
+        "y = my_system.predict(x) # Assuming 'my_system' is your system function\n",
         "\n",
-        "# Realizar la convolución\n",
-        "y_convolucion = np.convolve(x_n, h, mode='same')  # 'same' para obtener la salida con el mismo tamaño que x[n]\n",
+        "# Create a new time vector that matches the length of the output 'y'\n",
+        "t_n = np.linspace(-0.01, -0.01 + (len(y)-1)/fs, len(y))\n",
         "\n",
-        "# Graficar los resultados\n",
-        "plt.figure(figsize=(8, 5))\n",
-        "plt.plot(t, y_convolucion, label='Salida de la convolución')\n",
+        "plt.stem(t_n, y, label='Respuesta del')\n",
         "plt.xlabel('Tiempo (s)')\n",
         "plt.ylabel('Amplitud')\n",
-        "plt.title('Salida del Sistema utilizando Convolución')\n",
         "plt.legend()\n",
         "plt.grid()\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
       "metadata": {
         "id": "bbw36KxcourG"
